# modelkit-imdb

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  heroku.yml  noxfile.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
.github/workflows/: main.yml
.local_storage/imdb/vectorizer/0.0/: vocabulary.txt
.remote_storage/imdb/: vectorizer.versions
.remote_storage/imdb/classifier/0.0/: model.h5
modelkit_imdb/: classifiers.py  tokenizers.py  vectorizers.py
tests/: conftest.py  test_auto_testing.py
