[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
name = modelkit_imdb
description = IMDB Reviews example project leveraging modelkit
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = False
packages = find:
install_requires = 
	modelkit>=0.0.13
	fastapi
	uvicorn
	gunicorn
	numpy
	spacy
	tensorflow
	en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz

[options.packages.find]
where = .
exclude = 
	tests

[tool:pytest]
addopts = 
	--strict
	--verbose
	--tb=native
	-vv
	--failed-first
	--disable-warnings
	--durations 10
	--color=yes
	tests

[tool:isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E741,W605,B011,E203
exclude = build,lib

[coverage:run]
source = modelkit_imdb

[coverage:report]
fail_under = 90
precision = 2

[mypy]
ignore_missing_imports = True
plugins = pydantic.mypy
